added link to register

--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -66,9 +66,20 @@
             type="submit"
             [disabled]="loginForm.invalid"
           >
-            Login
+            Iniciar sesión
           </button>
-  
+          
+
+        </div>
+        <div class="flex justify-center items-center pt-2">
+          
+          <a
+            class="underline"
+            type=""
+            href="../registration/"
+          >
+            Registrarse
+          </a>
         </div>
       </form>
       
