--- a/src/app/modules/registration/registration.component.html
+++ b/src/app/modules/registration/registration.component.html
@@ -112,9 +112,19 @@
             type="submit"
             [disabled]="registerForm.invalid"
           >
-            Register
+            Registrarse
           </button>
   
+        </div>
+        <div class="flex justify-center items-center pt-2">
+          
+          <a
+            class="underline"
+            type=""
+            href="../login/"
+          >
+          Iniciar sesión
+          </a>
         </div>
       </form>
       
