--- a/src/app/modules/registration/registration.component.html
+++ b/src/app/modules/registration/registration.component.html
@@ -108,7 +108,7 @@
         <div class="flex items-center justify-between pt-2">
   
           <button
-            class="w-full bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline disabled:pointer-events-none disabled:opacity-30"
+            class="w-full bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline disabled:pointer-events-none disabled:opacity-30"
             type="submit"
             [disabled]="registerForm.invalid"
           >
