--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -74,7 +74,7 @@
         <div class="flex justify-center items-center pt-2">
           
           <a
-            class="underline"
+            class="underline text-blue-800"
             type=""
             href="../registration/"
           >
