--- a/src/app/modules/registration/registration.component.html
+++ b/src/app/modules/registration/registration.component.html
@@ -119,7 +119,7 @@
         <div class="flex justify-center items-center pt-2">
           
           <a
-            class="underline"
+            class="underline text-blue-800"
             type=""
             href="../login/"
           >
