--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Martel:wght@400;600;700;800;900&family=Maven+Pro:wght@400..900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    html {
+      font-family: 'Maven Pro', 'sans-serif', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue';
+    }
+    .container {
+        @apply max-w-[1512px] desktop-2:max-w-[1280px] tablet-1:max-w-[1024px] tablet-2:max-w-[744px] mobile-2:max-w-[320px];
+    }
+}
