--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,7 @@
 @layer base {
     html {
       font-family: 'Maven Pro', 'sans-serif', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue';
+      background-color: #f5f5f5;
     }
     .container {
         @apply max-w-[1512px] desktop-2:max-w-[1280px] tablet-1:max-w-[1024px] tablet-2:max-w-[744px] mobile-2:max-w-[320px];
