--- a/src/app/modules/footer/footer.component.html
+++ b/src/app/modules/footer/footer.component.html
@@ -1,1 +1,60 @@
-<p>footer works!</p>
+<footer class="w-screen text-white h-[505px] bg-blue-1 p-[40px] font-Inter">
+  <div class="flex justify-between max-w-[1270px] m-auto p-[40px] max-h-[220px] gap-[12px]">
+    <span class="max-w-[336px]">
+      <img src="assets/images/logo.svg" class="invert mb-10" alt="logo">
+      <p>Top learning experiences that create more talent in the world</p>
+    </span>
+
+    <span>
+      <p class="font-semibold text-[#98A2B3] text-small mb-[12px]">Product</p>
+      <ul class="font-medium text-medium text-[#EAECF0] flex flex-col gap-[8.5px]">
+        <li>Overview</li>
+        <li>Features</li>
+        <li>Solutions</li>
+        <li>Tutorials</li>
+        <li>Pricing</li>
+      </ul>
+    </span>
+
+    <span>
+      <p class="font-semibold text-[#98A2B3] text-small mb-[12px]">Company</p>
+      <ul class="font-medium text-medium text-[#EAECF0] flex flex-col gap-[8.5px]">
+        <li>About us</li>
+        <li>Careers</li>
+        <li>Press</li>
+        <li>News</li>
+      </ul>
+    </span>
+
+    <span>
+      <p class="font-semibold text-[#98A2B3] text-small mb-[12px]">Social</p>
+      <ul class="font-medium text-medium text-[#EAECF0] flex flex-col gap-[8.5px]">
+        <li>Twitter</li>
+        <li>LinkedIn</li>
+        <li>GitHub</li>
+        <li>Dribbble</li>
+      </ul>
+    </span>
+
+    <span>
+      <p class="font-semibold text-[#98A2B3] text-small mb-[12px]">Legal</p>
+      <ul class="font-medium text-medium text-[#EAECF0] flex flex-col gap-[8.5px]">
+        <li>Terms</li>
+        <li>Privacy</li>
+        <li>Cookies</li>
+        <li>Contact</li>
+      </ul>
+    </span>
+  </div>
+
+  <div class="p-[40px] flex justify-between mt-[67px] max-w-[1512px] m-auto">
+    <p class="text-[#98A2B3] font-regular text-medium">© 2024. All rights reserved.</p>
+    <span class="flex gap-[25px]">
+      <svg xmlns="http://www.w3.org/2000/svg" width="26" height="21" fill="none"><path fill="#98A2B3" d="M8.5276 20.8376c9.5071 0 14.7086-7.8785 14.7086-14.7086 0-.2214-.0049-.4478-.0148-.6693A10.5017 10.5017 0 0 0 25.8 2.7832a10.1942 10.1942 0 0 1-2.9674.812A5.1984 5.1984 0 0 0 25.106.7363a10.3927 10.3927 0 0 1-3.2819 1.2545 5.1768 5.1768 0 0 0-8.8136 4.7142 14.6839 14.6839 0 0 1-10.654-5.3978 5.1759 5.1759 0 0 0 1.5997 6.899 5.1763 5.1763 0 0 1-2.3423-.6448v.064a5.168 5.168 0 0 0 4.1481 5.0695 5.1378 5.1378 0 0 1-2.3324.0886 5.18 5.18 0 0 0 4.8273 3.593A10.3686 10.3686 0 0 1 .6 18.5154a14.6677 14.6677 0 0 0 7.9277 2.3222Z"/></svg>
+      <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="none"><g clip-path="url(#a)"><path fill="#98A2B3" d="M23.3328-.0004H1.8586C.83-.0004-.0018.8117-.0018 1.8158v21.5627c0 1.0041.8318 1.8211 1.8604 1.8211h21.4742c1.0287 0 1.8654-.817 1.8654-1.8162V1.8158c0-1.004-.8367-1.8162-1.8654-1.8162ZM7.4745 21.4738H3.7339V9.4447h3.7406v12.0291ZM5.6042 7.8058c-1.201 0-2.1706-.9697-2.1706-2.1657 0-1.196.9696-2.1656 2.1706-2.1656 1.196 0 2.1656.9696 2.1656 2.1656 0 1.191-.9696 2.1656-2.1656 2.1656Zm15.8681 13.668h-3.7357v-5.8472c0-1.3929-.0246-3.1894-1.9441-3.1894-1.9442 0-2.2395 1.5209-2.2395 3.0909v5.9457H9.8222V9.4447h3.5832v1.6439h.0492c.4971-.945 1.7177-1.9441 3.5339-1.9441 3.7849 0 4.4838 2.4904 4.4838 5.729v6.6003Z"/></g><defs><clipPath id="a"><path fill="#fff" d="M0-.0003h25.2v25.2H0z"/></clipPath></defs></svg>
+      <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="none"><g clip-path="url(#a)"><path fill="#98A2B3" d="M25.6004 12.5997c0-6.9588-5.6412-12.6-12.6-12.6-6.9588 0-12.6 5.6412-12.6 12.6 0 6.2889 4.6076 11.5016 10.6312 12.4469v-8.8047H7.8324v-3.6422h3.1992v-2.776c0-3.1579 1.8812-4.9022 4.7592-4.9022 1.3782 0 2.8205.2461 2.8205.2461v3.1008h-1.5888c-1.5651 0-2.0534.9714-2.0534 1.9688v2.3625h3.4946l-.5587 3.6422h-2.9359v8.8047c6.0237-.9453 10.6313-6.158 10.6313-12.4469Z"/></g><defs><clipPath id="a"><path fill="#fff" d="M.4001-.0003h25.2v25.2h-25.2z"/></clipPath></defs></svg>
+      <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="none"><g clip-path="url(#a)"><path fill="#98A2B3" fill-rule="evenodd" d="M13.4004-.0004c-6.959 0-12.6 5.6498-12.6 12.6214 0 5.5755 3.61 10.3068 8.6172 11.975.63.116.8593-.2734.8593-.6085 0-.2987-.0101-1.0937-.0164-2.1458-3.5053.7623-4.245-1.6922-4.245-1.6922-.572-1.4591-1.3986-1.8472-1.3986-1.8472-1.144-.7812.087-.766.087-.766 1.2638.0882 1.929 1.3003 1.929 1.3003 1.124 1.9278 2.9497 1.3709 3.6667 1.0483.1159-.8152.441-1.3709.8013-1.6859-2.7972-.3188-5.7393-1.4024-5.7393-6.2382 0-1.3772.4914-2.505 1.2966-3.387-.1298-.3187-.562-1.6027.1234-3.339 0 0 1.0584-.3401 3.465 1.2928a12.0514 12.0514 0 0 1 3.1538-.4246c1.071.005 2.1483.145 3.1551.4246 2.4053-1.633 3.4612-1.294 3.4612-1.294.6879 1.7375.2545 3.0215.126 3.3403.8064.882 1.2953 2.0097 1.2953 3.3869 0 4.8484-2.9472 5.9157-5.7532 6.2281.4523.3894.8543 1.1592.8543 2.3373 0 1.6859-.0151 3.048-.0151 3.4613 0 .3376.2268.7308.8668.6073a12.6235 12.6235 0 0 0 8.6096-11.9738c0-6.9716-5.6423-12.6214-12.6-12.6214Z" clip-rule="evenodd"/></g><defs><clipPath id="a"><path fill="#fff" d="M.8003-.0003h25.2v25.2h-25.2z"/></clipPath></defs></svg>
+      <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="none"><path fill="#98A2B3" fill-rule="evenodd" d="M12.7998-.0003c-6.956 0-12.6 5.644-12.6 12.6 0 6.956 5.644 12.6 12.6 12.6 6.9423 0 12.6-5.644 12.6-12.6 0-6.956-5.6577-12.6-12.6-12.6Zm8.3226 5.808c1.5032 1.8313 2.4052 4.1681 2.4326 6.6963-.3554-.0682-3.9086-.7926-7.489-.3416-.082-.1776-.1503-.369-.2323-.5603-.2187-.5193-.4647-1.0523-.7107-1.5579 3.9631-1.6126 5.7671-3.9358 5.9994-4.2365Zm-8.3226-3.9494c2.7332 0 5.2341 1.025 7.1337 2.7058-.1914.2734-1.8177 2.4462-5.6441 3.8811-1.7629-3.2388-3.7171-5.89-4.0178-6.3.8063-.1913 1.6536-.287 2.5282-.287Zm-4.578 1.0113c.287.3826 2.2002 3.0475 3.9904 6.218-5.029 1.3392-9.4705 1.3119-9.9488 1.3119.697-3.3345 2.9518-6.1087 5.9584-7.53ZM2.031 12.6134v-.328c.4646.0136 5.685.082 11.0557-1.5306.3144.6013.6013 1.2162.8747 1.8312-.1367.041-.2871.0821-.4237.123-5.5484 1.7902-8.5002 6.6827-8.7462 7.0926-1.7083-1.8995-2.7605-4.4277-2.7605-7.1882Zm10.7687 10.7551c-2.4872 0-4.783-.8473-6.6006-2.2686.1913-.3963 2.3778-4.6054 8.4455-6.7236.0273-.0137.041-.0137.0684-.0273 1.5168 3.922 2.1319 7.2155 2.2958 8.1585-1.2982.5603-2.7195.861-4.2091.861Zm5.9994-1.8449c-.1093-.656-.6834-3.7992-2.0909-7.6666 3.3755-.533 6.3273.3417 6.6963.4647-.4646 2.9928-2.1866 5.5756-4.6054 7.2019Z" clip-rule="evenodd"/></svg>
+    </span>
+  </div>
+</footer>
